# CMakeTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
app/: Main.cpp
apps/: CMakeLists.txt  Main.cpp
src/: CMakeLists.txt  Functions.cpp  Functions.h
